--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
        
             .ljw > a {
                 width: 180px;
-                height: 40px;
+                height: 50px;
                 margin: 40px auto 0px auto;
 
                 background-color: whitesmoke;
                 border-radius: 8px;
 
-                font-size: 16px;
+                font-size: 15px;
                 font-weight: bold;
                 color: rgb(99, 8, 142);
 
@@ -79,7 +79,7 @@
             .ljw > a:hover {
                 background-image: url('인스타 로고 2.jpg');
                 background-position-x: center;
-                background-position-y: -3.2mm;
+                background-position-y: -2.5mm;
                 background-size: 85%;
                 color: rgba(255, 255, 255, 0);
 
@@ -97,8 +97,7 @@
             <h1 class="main">LEE JI WON</h1>
             <h2 class="submain"> Lizzy,</h2>
             <p class="sub"> Easy one, Normal one, Hard one! </p>
-            <a target="_blank" href="http://www.instagram.com/lizzyyy_luv"> FOLLOW, ING
-                </a>
+            <a target="_blank" href="http://www.instagram.com/lizzyyy_luv"> FOLLOW, ING </a>
             <h3> @lizzyyy_luv</h3>
         </div>
         
