--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="Hello, Lizzy" />
         <meta property="og:description" content="Hello, My Name is Lizzy" />
-        <meta property="og:image" content="'메인.jpg" />
+        <meta property="og:image" content="https://www.instagram.com/p/CduXcO4sIWC/?igshid=YmMyMTA2M2Y=" />
         <title>Lee Ji Won, Lizzy_</title>
         <style>
             body {
